--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -35,4 +35,7 @@
  */
 dependencies {
     runtimeOnlyNonPublishable("com.github.GTNewHorizons:NotEnoughItems:2.7.4-GTNH:dev")
+    api("com.github.GTNewHorizons:ModularUI:1.2.18:dev")
+//    api("com.github.GTNewHorizons:ModularUI2:2.2.4-1.7.10:dev")
+    api files("libs/[1.7.10]TerraFirmaCraftPlus-0.89.1.jar")
 }
