--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -3,9 +3,9 @@ name: Build and test
 
 on:
   pull_request:
-    branches: [ master, main ]
+    branches: [ tfcp, tfc ]
   push:
-    branches: [ master, main ]
+    branches: [ tfcp, tfc ]
 
 jobs:
   build-and-test:
