--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -36,5 +36,5 @@
 dependencies {
     runtimeOnlyNonPublishable("com.github.GTNewHorizons:NotEnoughItems:2.7.4-GTNH:dev")
     api("com.github.GTNewHorizons:ModularUI:1.2.18:dev")
-    api("curse.maven:tfcp-287053:3779225")
+    api("curse.maven:tfc-302973:2627990")
 }
